# investigate_overlays

case_1/: README.md
case_1/underlay/src/: pkg_a  pkg_b
case_2/: README.md
case_2/overlay/src/: overlay_checker
case_2/overlay/src/pkg_b/: CMakeLists.txt  package.xml
case_2/overlay/src/pkg_b/include/: pkg_b.h
case_2/overlay/src/pkg_b/include/pkg_b/: pkg_b.h
case_3/: README.md
include_order/: README.md
include_order/overlay_1/src/checker/: main.cpp
include_order/overlay_1/src/pkg_b/: class.cpp
include_order/overlay_1/src/pkg_b/include/: pkg_b.h
include_order/overlay_2/src/checker/: CMakeLists.txt
include_order/underlay/src/pkg_a/: package.xml
include_order/underlay/src/pkg_b/: package.xml
include_order/underlay/src/pkg_b/include/: pkg_b.h
leaf_overlay_order/overlay_1/src/checker/: CMakeLists.txt
leaf_overlay_order/underlay/src/pkg_a/: class.cpp
leaf_overlay_order/underlay/src/pkg_a/include/: pkg_a.h
lib_name_change/overlay/src/checker/: main.cpp  main_2.cpp  package.xml
lib_name_change/overlay/src/pkg_a/: CMakeLists.txt  a.cpp
lib_name_change/underlay/src/pkg_a/: CMakeLists.txt  a.cpp
lib_name_change/underlay/src/pkg_b/: CMakeLists.txt  b.cpp
overlay_checker/: CMakeLists.txt  main.cpp  package.xml
pkg_a/: CMakeLists.txt  package.xml  pkg_a.cpp
pkg_a/include/pkg_a/: pkg_a.h
pkg_b/: CMakeLists.txt  pkg_b.cpp
pkg_b/include/pkg_b/: pkg_b.h
static_libs/: look_for_static_libs.bash  static_libs.txt
static_libs/overlay/src/checker/: CMakeLists.txt
static_libs/overlay/src/pkg_a/: CMakeLists.txt
static_libs/overlay/src/pkg_a/include/: pkg_a.h
static_libs/underlay/src/pkg_b/include/: pkg_b.h
two_catkin_pkg/: README.md  README_3.md
two_catkin_pkg/overlay_3/src/checker/: CMakeLists.txt
two_catkin_pkg/overlay_3/src/pkg_a/include/: pkg_a.h
two_catkin_pkg/underlay/src/pkg_a/: CMakeLists.txt
