<?xml version="1.0"?>
<package format="2">
  <name>overlay_checker</name>
  <version>0.0.0</version>
  <description>overlay_checker</description>
  <maintainer email="osrf@todo.todo">osrf</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pkg_a</depend>
  <depend>pkg_b</depend>

  <export>
  </export>
</package>
