<?xml version="1.0"?>
<package format="2">
  <name>pkg_b</name>
  <version>0.0.0</version>
  <description>pkg_b</description>
  <maintainer email="osrf@todo.todo">osrf</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pkg_a</depend>

  <export>
  </export>
</package>
